<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shopping_list">

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.smart.pantry.ui.shopping_list.list.ShoppingListFragment"
        android:label="@string/title_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/navigation_save_shopping_list"
        android:name="com.smart.pantry.ui.shopping_list.save.SaveShoppingListFragment"
        android:label="@string/title_shopping_list"
        tools:layout="@layout/fragment_save_shopping_list" />

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="com.smart.pantry.ui.pantry.PantryFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" />

    <fragment
        android:id="@+id/navigation_smart_nutrition"
        android:name="com.smart.pantry.ui.smart_nutrition.SmartNutritionFragment"
        android:label="@string/title_smart_nutrition"
        tools:layout="@layout/fragment_smart_nutrition" />
    <fragment
        android:id="@+id/navigation_detail_shopping_list"
        android:name="com.smart.pantry.ui.shopping_list.detail.DetailShoppingListFragment"
        android:label="@string/title_details_nutrition"
        tools:layout="@layout/fragment_detail_shopping_list" />

    <fragment
        android:id="@+id/navigation_edit_shopping_list"
        android:name="com.smart.pantry.ui.shopping_list.edit.EditShoppingListFragment"
        android:label="@string/title_edit_nutrition"
        tools:layout="@layout/fragment_edit_shopping_list" />

</navigation>