<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.smart.pantry.ui.shopping_list.save.SaveShoppingListViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.smart.pantry.custom.ScrollChildSwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:id="@+id/titleHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_tittle_add_shopping_list"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/add_shopping_list_tittle_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_hint"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/createButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/cancel"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleHome" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/createButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/continu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleHome" />

                </androidx.constraintlayout.widget.ConstraintLayout>
        </com.smart.pantry.custom.ScrollChildSwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
